feat(security): integrate crowdsec for enhanced protection
Integrates CrowdSec into the infrastructure to provide real-time threat detection and mitigation, enhancing overall security posture.

- Adds CrowdSec role and configuration for Docker deployment.
- Configures Traefik to use the CrowdSec bouncer for blocking malicious requests.
- Enables CrowdSec to parse Traefik and auth logs for threat analysis.
- Sets up automated CrowdSec hub updates and upgrades.
- Adds a `cscli` alias for easier CrowdSec command-line interaction.
- Updates README.md to reflect the addition of CrowdSec to the task list.
- Modifies `provisioning.yml` to include the CrowdSec role.
- Updates `sample.yml` to enable CrowdSec by default.
- Creates default configurations for CrowdSec, including log parsing and collections.
- Generates a Traefik bouncer key for communication with CrowdSec.
- Configures Traefik's `traefik.toml` and `crowdsec.toml.j2` for bouncer integration.
- Ensures Traefik logs are accessible to CrowdSec.
- Updates Traefik entrypoints to use `web` and `websecure` for better compatibility.
- Adds CrowdSec bouncer middleware to Traefik's secure entrypoint.
- Configures Traefik's access log path.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -41,10 +41,10 @@
         - lazydocker
       when: (lazydocker_enabled | default(False))
 
-    - role: watchtower
+    - role: crowdsec
       tags:
-        - watchtower
-      when: (watchtower_enabled | default(False))
+        - crowdsec
+      when: (crowdsec_enabled | default(False))
 
     - role: traefik
       tags:
@@ -115,3 +115,8 @@
       tags:
         - obsidian
       when: (obsidian_livesync_enabled | default(False))
+
+    - role: watchtower
+      tags:
+        - watchtower
+      when: (watchtower_enabled | default(False))
