chore(docs): clarify user creation and disable certresolver
Clarifies the user creation process in the README and comments out TLS certresolver configurations in the threexui role.

- Updates README.md to specify that user creation can be done via GraphQL scripting or a bootstrap script.
- Comments out `traefik.http.routers.threexui-panel.tls.certresolver` in roles/threexui/tasks/main.yml.
- Comments out `traefik.http.routers.threexui-vless.tls.certresolver` in roles/threexui/tasks/main.yml.
- Comments out `traefik.http.routers.threexui-vless.priority` in roles/threexui/tasks/main.yml.

--- a/roles/threexui/tasks/main.yml
+++ b/roles/threexui/tasks/main.yml
@@ -30,14 +30,14 @@
       # Admin panel routing
       traefik.enable: "true"
       traefik.http.routers.threexui-panel.rule: "Host(`{{ threexui_subdomain }}.{{ server_hostname }}`)"
-      traefik.http.routers.threexui-panel.tls.certresolver: "letsencrypt"
+      # traefik.http.routers.threexui-panel.tls.certresolver: "letsencrypt"
       traefik.http.routers.threexui-panel.middlewares: "secure-headers@file"
       traefik.http.routers.threexui-panel.service: "threexui-panel"
       traefik.http.services.threexui-panel.loadbalancer.server.port: "{{ threexui_panel_port }}"
 
       # VLESS+XHTTP routing (no auth, for proxy clients)
       traefik.http.routers.threexui-vless.rule: "Host(`{{ threexui_subdomain }}.{{ server_hostname }}`) && PathPrefix(`{{ threexui_xhttp_path }}`)"
-      traefik.http.routers.threexui-vless.tls.certresolver: "letsencrypt"
-      traefik.http.routers.threexui-vless.priority: "100"
+      # traefik.http.routers.threexui-vless.tls.certresolver: "letsencrypt"
+      # traefik.http.routers.threexui-vless.priority: "100"
       traefik.http.routers.threexui-vless.service: "threexui-vless"
       traefik.http.services.threexui-vless.loadbalancer.server.port: "{{ threexui_vless_port }}"
