feat(crowdsec): enable and configure crowdsec security
This commit introduces the CrowdSec security agent, enabling it to monitor logs and protect the server from malicious activity. It includes configuration for log acquisition, remediation profiles, and essential system preparations.

- Added `ansible.cfg` to configure SSH connection settings for Ansible.
- Enabled `crowdsec_enabled` and added `crowdsec_enroll_key` to `inventories/sample/group_vars/sample.yml`.
- Refactored CrowdSec directory structure in `roles/crowdsec/defaults/main.yml` for better organization.
- Introduced `crowdsec_ban_duration` and `crowdsec_instance_name` defaults for CrowdSec.
- Removed old CrowdSec directory removal task and added a task to ensure `/var/log/auth.log` exists in `roles/crowdsec/tasks/main.yml`.
- Updated CrowdSec Docker container configuration to mount the entire config directory and added DNS servers.
- Added `profiles.yaml.j2` template for CrowdSec IP remediation.
- Included `rsyslog` in `roles/server_general_preparations/defaults/main.yml` to ensure `auth.log` generation.
- Added `hostname.yml` to `roles/server_general_preparations/tasks/main.yml` for setting the system hostname.
- Ensured `rsyslog` is running and enabled in `roles/server_general_preparations/tasks/maintenance.yml`.
- Modified the `PS1` environment variable in `roles/users/templates/.bashrc` to use `\H` for the full hostname.

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -52,7 +52,9 @@ swap_enabled: true
 mayurifag_github_io_enabled: true
 lazydocker_enabled: true
 docker_enabled: true
+
 crowdsec_enabled: true
+crowdsec_enroll_key: "change_me"
 
 proxy_enabled: true
 proxy_user: change_this
