--- a/roles/server_general_preparations/defaults/main.yml
+++ b/roles/server_general_preparations/defaults/main.yml
@@ -75,6 +75,7 @@ mayurifag_general_extra_packages:
   - net-tools
   - nethogs
   - ntp
+  - rsyslog
   - software-properties-common
   - unattended-upgrades
   - unzip
