--- a/roles/crowdsec/defaults/main.yml
+++ b/roles/crowdsec/defaults/main.yml
@@ -1,12 +1,20 @@
 ---
 crowdsec_enabled: true
 
-crowdsec_data_directory: "{{ docker_home }}/crowdsec"
-crowdsec_config_directory: "{{ crowdsec_data_directory }}/config"
+crowdsec_directory: "{{ docker_home }}/crowdsec"
+crowdsec_data_directory: "{{ crowdsec_directory }}/data"
+crowdsec_config_directory: "{{ crowdsec_directory }}/config"
 crowdsec_traefik_logs_directory: "{{ docker_home }}/traefik/logs"
 
 crowdsec_image: crowdsecurity/crowdsec:latest
 crowdsec_memory: 512m
+
+# Ban duration (1 week)
+crowdsec_ban_duration: "168h"
+
+# CrowdSec Console Enrollment
+crowdsec_enroll_key: "change_me"
+crowdsec_instance_name: "{{ server_hostname }}"
 
 crowdsec_collections:
   - crowdsecurity/traefik
