refactor(crowdsec): integrate traefik logs and improve config
This commit refactors the CrowdSec role to integrate with Traefik logs and centralize configuration. It also updates the README to reflect the new task order and adds log rotation for Traefik.

- Moved `crowdsec_traefik_logs_directory` to `traefik_logs_directory` for consistency.
- Updated `acquis.yaml.j2` to point to the correct Traefik log file path.
- Added a comment in `crowdsec/tasks/main.yml` to indicate the dependency on Traefik for CrowdSec provisioning.
- Ensured logrotate is installed and configured for Traefik logs.
- Restarted the CrowdSec container to ensure log mounts are correctly applied.
- Updated the README.md to reflect the new order of tasks and added new items.
- Removed `crowdsec_memory` and DNS servers from the CrowdSec container configuration.
- Added `net.ipv4.ip_forward` to sysctl values for CrowdSec container DNS resolution.
- Reduced `bufferingSize` for Traefik access logs.

--- a/roles/crowdsec/tasks/main.yml
+++ b/roles/crowdsec/tasks/main.yml
@@ -46,17 +46,13 @@
     pull: true
     recreate: true
     restart_policy: unless-stopped
-    memory: "{{ crowdsec_memory }}"
     networks:
       - name: "web"
-    dns_servers:
-      - "1.1.1.1"
-      - "8.8.8.8"
     volumes:
       - "{{ crowdsec_data_directory }}:/var/lib/crowdsec/data"
       - "{{ crowdsec_config_directory }}:/etc/crowdsec"
       - "/var/log/auth.log:/var/log/auth.log:ro"
-      - "{{ crowdsec_traefik_logs_directory }}:/var/log/traefik:ro"
+      - "{{ traefik_logs_directory }}:/var/log/traefik:ro"
     env:
       COLLECTIONS: "{{ crowdsec_collections | join(' ') }}"
       GID: "{{ ansible_facts.getent_passwd[admin_username][2] }}"
@@ -72,6 +68,9 @@
   delay: 2
   changed_when: false
 
+# because of this config crowdsec provision has to be deployed with traefik now
+# I should never delete this bouncer, only if dynamic config in traefik doesnt exist
+# or create dynamic config for traefik here on this role
 - name: Create Traefik Bouncer
   ansible.builtin.shell: |
     docker exec crowdsec cscli bouncers delete traefik-bouncer || true
