feat(docs): update README and watchtower config
Updated the README to reflect changes in the Watchtower application entry and modified the Watchtower role defaults to use a new image and enable its HTTP API.

- Changed the "Autoupdate" column to "Watchtower" in the README's applications list.
- Updated the Watchtower image from `containrrr/watchtower:latest` to `nickfedor/watchtower:latest` in `roles/watchtower/defaults/main.yml`.
- Enabled the Watchtower HTTP API by setting `com.centurylinklabs.watchtower.enable` to `true` in `roles/watchtower/tasks/main.yml`.
- Corrected the name of the Watchtower entry in the README to "Watchtower HTTP API".

--- a/roles/watchtower/defaults/main.yml
+++ b/roles/watchtower/defaults/main.yml
@@ -5,7 +5,7 @@ watchtower_available_externally: "true"
 watchtower_subdomain: "watchtower"
 watchtower_http_api_token: change_this
 
-watchtower_image: containrrr/watchtower:latest
+watchtower_image: nickfedor/watchtower:latest
 
 # every week
 watchtower_command: --debug --label-enable --http-api-update --http-api-periodic-polls --cleanup --interval 604800
