--- a/roles/watchtower/tasks/main.yml
+++ b/roles/watchtower/tasks/main.yml
@@ -14,4 +14,4 @@
       traefik.enable: "{{ watchtower_available_externally }}"
       traefik.http.routers.watchtower.rule: "Host(`{{ watchtower_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.watchtower.loadbalancer.server.port: "8080"
-      com.centurylinklabs.watchtower.enable: "false"
+      com.centurylinklabs.watchtower.enable: "true"
