--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Remove Portainer Directories
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - "{{ portainer_data_directory }}"
+
 - name: Create Portainer Directories
   ansible.builtin.file:
     path: "{{ item }}"
@@ -6,12 +13,47 @@
   with_items:
     - "{{ portainer_data_directory }}"
 
-- name: Portainer Docker Container
+- name: Portainer Docker Container - init for bootstrap
   community.docker.docker_container:
     name: portainer
     image: portainer/portainer-ce:lts
     pull: true
     recreate: true
+    command: --no-analytics
+    volumes:
+      - "{{ portainer_data_directory }}:/data:rw"
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "/etc/timezone:/etc/timezone:ro"
+    ports:
+      - "127.0.0.1:9000:9000"
+    restart_policy: unless-stopped
+    memory: "{{ portainer_memory }}"
+
+- name: Wait for Portainer to be ready
+  ansible.builtin.wait_for:
+    port: 9000
+    host: 127.0.0.1
+    delay: 5
+    timeout: 60
+
+- name: Create Portainer Admin User
+  ansible.builtin.uri:
+    url: "http://127.0.0.1:9000/api/users/admin/init"
+    method: POST
+    body_format: json
+    body:
+      Username: "{{ admin_username }}"
+      Password: "{{ admin_userldappassword }}"
+    status_code: [200, 409]
+  register: portainer_admin_init
+  changed_when: portainer_admin_init.status == 200
+
+- name: Portainer Docker Container - production without exposed ports
+  community.docker.docker_container:
+    name: portainer
+    image: portainer/portainer-ce:lts
+    recreate: true
+    command: --no-analytics
     volumes:
       - "{{ portainer_data_directory }}:/data:rw"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
