feat(threexui): add post-install guide and refine config
Introduces a comprehensive POST_INSTALL.md document detailing manual configuration steps for 3x-ui, including default credentials and VLESS Reality XTLS setup. Refactors configuration variables for clarity and separates panel and subscription subdomains.

- Creates POST_INSTALL.md with detailed instructions for 3x-ui setup.
- Updates README.md to reference POST_INSTALL.md and clarify 3x-ui endpoints.
- Adds `threexui_enabled`, `threexui_panel_subdomain`, and `threexui_subscription_subdomain` to sample group vars.
- Modifies Gitea role to dynamically fetch USER_UID and USER_GID from the passwd database.
- Removes unused `threexui_subdomain`, `threexui_admin_username`, `threexui_admin_password`, `threexui_panel_port`, `threexui_vless_port`, `threexui_xhttp_path`, and `threexui_memory` from `roles/threexui/defaults/main.yml`.
- Adds `threexui_panel_subdomain`, `threexui_subscription_subdomain`, and `threexui_reality_domain` to `roles/threexui/defaults/main.yml`.
- Adds a task to remove existing 3x-ui directories before creating new ones.
- Updates 3x-ui Docker container configuration to use new subdomain variables and Traefik labels for panel, subscription, and Reality TCP routing.
- Sets Traefik TCP router for Reality on port 443 with passthrough TLS.

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -111,3 +111,7 @@ lldap_enabled: true
 lldap_subdomain: "ldap"
 lldap_jwt_secret: "change_this_random_string_min_32_chars"
 lldap_key_seed: "change_this_random_string_min_32_chars"
+
+threexui_enabled: true
+threexui_panel_subdomain: "3x"
+threexui_subscription_subdomain: "3xsub"
