--- a/roles/threexui/defaults/main.yml
+++ b/roles/threexui/defaults/main.yml
@@ -3,24 +3,11 @@ threexui_enabled: true
 
 threexui_data_directory: "{{ docker_home }}/3x-ui"
 threexui_docker_image: ghcr.io/mhsanaei/3x-ui:latest
-threexui_subdomain: "threexui"
 
-# Admin panel credentials
-threexui_admin_username: "admin"
-threexui_admin_password: "change_this_password"
+threexui_panel_subdomain: "3x"
+threexui_subscription_subdomain: "3xsub"
 
-# Panel port for admin interface (internal)
-threexui_panel_port: "2053"
+threexui_reality_domain: "learn.microsoft.com"
 
-# VLESS inbound port (internal, Traefik will route to this)
-threexui_vless_port: "2096"
-
-# XHTTP settings
-threexui_xhttp_path: "/vless"
-
-# Xray settings
 threexui_vmess_aead_forced: "false"
 threexui_enable_fail2ban: "true"
-
-# Resources
-threexui_memory: 1g
