--- a/roles/threexui/tasks/main.yml
+++ b/roles/threexui/tasks/main.yml
@@ -1,11 +1,18 @@
 ---
+- name: Remove 3x-ui Directories
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - "{{ threexui_data_directory }}/db"
+    # - "{{ threexui_data_directory }}/cert"
+
 - name: Create 3x-ui Directories
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     mode: "0755"
   with_items:
-    - "{{ threexui_data_directory }}"
     - "{{ threexui_data_directory }}/db"
     - "{{ threexui_data_directory }}/cert"
 
@@ -22,22 +29,25 @@
       XRAY_VMESS_AEAD_FORCED: "{{ threexui_vmess_aead_forced }}"
       XUI_ENABLE_FAIL2BAN: "{{ threexui_enable_fail2ban }}"
     restart_policy: unless-stopped
-    memory: "{{ threexui_memory }}"
-    tty: true
     networks:
       - name: "web"
     labels:
-      # Admin panel routing
       traefik.enable: "true"
-      traefik.http.routers.threexui-panel.rule: "Host(`{{ threexui_subdomain }}.{{ server_hostname }}`)"
-      # traefik.http.routers.threexui-panel.tls.certresolver: "letsencrypt"
-      traefik.http.routers.threexui-panel.middlewares: "secure-headers@file"
-      traefik.http.routers.threexui-panel.service: "threexui-panel"
-      traefik.http.services.threexui-panel.loadbalancer.server.port: "{{ threexui_panel_port }}"
 
-      # VLESS+XHTTP routing (no auth, for proxy clients)
-      traefik.http.routers.threexui-vless.rule: "Host(`{{ threexui_subdomain }}.{{ server_hostname }}`) && PathPrefix(`{{ threexui_xhttp_path }}`)"
-      # traefik.http.routers.threexui-vless.tls.certresolver: "letsencrypt"
-      # traefik.http.routers.threexui-vless.priority: "100"
-      traefik.http.routers.threexui-vless.service: "threexui-vless"
-      traefik.http.services.threexui-vless.loadbalancer.server.port: "{{ threexui_vless_port }}"
+      # Web Panel
+      traefik.http.routers.threexui-panel.rule: "Host(`{{ threexui_panel_subdomain }}.{{ server_hostname }}`)"
+      traefik.http.routers.threexui-panel.service: "threexui-panel"
+      traefik.http.services.threexui-panel.loadbalancer.server.port: "2053"
+      traefik.http.routers.threexui-panel.middlewares: "secure-headers@file"
+
+      # Subscription
+      traefik.http.routers.threexui-sub.rule: "Host(`{{ threexui_subscription_subdomain }}.{{ server_hostname }}`)"
+      traefik.http.routers.threexui-sub.service: "threexui-subscription"
+      traefik.http.services.threexui-subscription.loadbalancer.server.port: "2096"
+      traefik.http.routers.threexui-sub.middlewares: "secure-headers@file"
+
+      # Reality TCP
+      traefik.tcp.routers.threexui-reality.rule: "HostSNI(`{{ threexui_reality_domain }}`)"
+      traefik.tcp.routers.threexui-reality.tls.passthrough: "true"
+      traefik.tcp.routers.threexui-reality.service: "threexui-reality"
+      traefik.tcp.services.threexui-reality.loadbalancer.server.port: "443"
