feat(homepage): integrate homepage dashboard
Integrates the homepage dashboard to provide a centralized view of all deployed services, enhancing usability and quick access.

- Adds a new `homepage` role for managing the dashboard.
- Configures homepage settings, including theme and external access.
- Enables automatic discovery of Docker services via labels.
- Adds homepage integration to various service roles (Blocky, Gitea, Hemmelig, LLDAP, mayurifag.github.io, mus, Netdata, Portainer, 3x-ui, TinyAuth, Traefik, Vaultwarden, Watchtower) for seamless dashboard display.
- Updates README.md to reflect the addition of Homepage.dev.
- Adds `homepage_enabled` and `homepage_subdomain` to `inventories/sample/group_vars/sample.yml`.
- Includes the homepage role in `provisioning.yml`.
- Removes commented-out directory removal for 3x-ui.
- Updates `traefik.toml.j2` to remove an unused conditional block.

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -84,6 +84,9 @@ portainer_subdomain: "portainer"
 traefik_enabled: true
 traefik_subdomain: "traefik"
 
+homepage_enabled: true
+homepage_subdomain: "home"
+
 hemmelig_enabled: true
 hemmelig_subdomain: "secret"
 
