--- a/roles/mus/tasks/main.yml
+++ b/roles/mus/tasks/main.yml
@@ -24,3 +24,8 @@
       traefik.http.services.mus.loadbalancer.server.port: "8000"
       traefik.http.routers.mus.middlewares: "secure-headers@file,tinyauth@docker"
       com.centurylinklabs.watchtower.enable: "true"
+
+      homepage.group: "Services"
+      homepage.name: "mus"
+      homepage.icon: "music.png"
+      homepage.href: "https://{{ mus_subdomain }}.{{ server_hostname }}"
