--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -68,3 +68,8 @@
       traefik.http.services.portainer.loadbalancer.server.port: "9000"
       traefik.http.routers.portainer.middlewares: "secure-headers@file"
       com.centurylinklabs.watchtower.enable: "true"
+
+      homepage.group: "Infrastructure"
+      homepage.name: "Portainer"
+      homepage.icon: "portainer.png"
+      homepage.href: "https://{{ portainer_subdomain }}.{{ server_hostname }}"
