--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -44,3 +44,10 @@
       traefik.http.routers.netdata.rule: "Host(`{{ netdata_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.netdata.loadbalancer.server.port: "19999"
       traefik.http.routers.netdata.middlewares: "tinyauth@docker,secure-headers@file"
+
+      homepage.group: "Monitoring"
+      homepage.name: "Netdata"
+      homepage.icon: "netdata.png"
+      homepage.href: "https://{{ netdata_subdomain }}.{{ server_hostname }}"
+      homepage.widget.type: "netdata"
+      homepage.widget.url: "http://netdata:19999"
