feat(opencloud): add opencloud service role
Adds a new Ansible role for deploying and configuring the OpenCloud service.

- Adds `roles/opencloud/defaults/main.yml` to define default variables for OpenCloud.
- Adds `roles/opencloud/tasks/main.yml` to define the tasks for provisioning the OpenCloud Docker container.
- Updates `provisioning.yml` to include the OpenCloud role in the provisioning process.
- Adds an entry for OpenCloud in `README.md`'s Applications List.
- Enables OpenCloud and sets its subdomain in `inventories/sample/group_vars/sample.yml`.
- Configures OpenCloud to use the LLDAP service for authentication.
- Sets up Traefik labels for routing and homepage integration.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -116,6 +116,11 @@
         - nextcloud
       when: (nextcloud_enabled | default(False))
 
+    - role: opencloud
+      tags:
+        - opencloud
+      when: (opencloud_enabled | default(False))
+
     - role: gitea
       tags:
         - gitea
