--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -118,3 +118,6 @@ lldap_key_seed: "change_this_random_string_min_32_chars"
 threexui_enabled: true
 threexui_panel_subdomain: "3x"
 threexui_subscription_subdomain: "3xsub"
+
+opencloud_enabled: true
+opencloud_subdomain: "cloud"
