feat(crowdsec): add whitelist configuration for parsers
Introduces a new whitelist configuration for Crowdsec parsers to manage false positives and improve detection accuracy. This change adds a new template file and updates the Ansible role to deploy it.

- Added `roles/crowdsec/templates/whitelist.yaml.j2` to define a custom whitelist.
- Created a new directory `roles/crowdsec/tasks/parsers/s02-enrich` to organize parser configurations.
- Updated `roles/crowdsec/tasks/main.yml` to create the new whitelist configuration file.
- Added a new task to ensure the `crowdsec_config_directory/parsers/s02-enrich` directory exists.
- Updated `README.md` to include a task for investigating solutions to unban false positives.

--- a/roles/crowdsec/tasks/main.yml
+++ b/roles/crowdsec/tasks/main.yml
@@ -19,6 +19,7 @@
   with_items:
     - "{{ crowdsec_data_directory }}"
     - "{{ crowdsec_config_directory }}"
+    - "{{ crowdsec_config_directory }}/parsers/s02-enrich"
 
 - name: Create acquisition config
   ansible.builtin.template:
@@ -30,6 +31,12 @@
   ansible.builtin.template:
     src: profiles.yaml.j2
     dest: "{{ crowdsec_config_directory }}/profiles.yaml"
+    mode: "0644"
+
+- name: Create Whitelist configuration
+  ansible.builtin.template:
+    src: whitelist.yaml.j2
+    dest: "{{ crowdsec_config_directory }}/parsers/s02-enrich/whitelist.yaml"
     mode: "0644"
 
 - name: Ensure auth.log exists
