refactor(traefik): remove unused blocky configuration
Removed outdated and unused Traefik configuration for Blocky, simplifying the codebase and reducing potential confusion.

- Deleted the `alpn-dot-for-blocky.toml.j2` template as it was no longer needed.
- Commented out specific Traefik labels in `roles/blocky/tasks/main.yml` that were either redundant or superseded by other configurations.
- Removed the `renovate.json` file as it was empty and likely a remnant of previous configuration.

--- a/roles/blocky/tasks/main.yml
+++ b/roles/blocky/tasks/main.yml
@@ -62,12 +62,10 @@
       - "853:853"
     labels:
       traefik.enable: "{{ blocky_available_externally }}"
-      traefik.tcp.routers.blocky-dns.rule: "HostSNI(`{{ server_hostname }}`)"
-      traefik.tcp.routers.blocky-dns.tls.options: "dot@file"
       traefik.http.routers.blocky.rule: "Host(`{{ blocky_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.blocky.loadbalancer.server.port: "4000"
-      traefik.frontend.rule: "HostRegexp:{catchall:.*}"
-      traefik.frontend.priority: "1"
+      # traefik.frontend.rule: "HostRegexp:{catchall:.*}"
+      # traefik.frontend.priority: "1"
 
       homepage.group: "API"
       homepage.name: "Blocky"
